# xion

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEFERRED_DECISIONS.md  DEVELOPMENT_ROADMAP.md  Dockerfile  GEMINI.md  KNOWN_WEAKNESSES.md  LICENSE  LONG_HORIZON_THREATS.md  PHASE_6_8_SPEND_AUTHORITY_PLAN.md  README.md  STATE_CHAIN_LEDGER.jsonl  journal.db  pyproject.toml  test_invoke.py  testnet_writer.py  xion_relay_chute.py
contracts/: .gitignore  foundry.toml
docker/: entrypoint-xion-orchestrator-api.sh
docs/: 00-INDEX.md  01-ORIGIN.md  02-MANIFESTO.md  03-COVENANT.md  04-ARCHITECTURE.md  05-SENSORIUM.md  06-FORM-AND-PRESENCE.md  07-ECONOMY.md  08-AUTO-RESEARCH.md  09-GOVERNANCE.md  10-IMMORTALITY.md  11-PROTOCOL-SPEC.md  12-LEXICON.md  13-OPERATIONS.md  14-UPGRADE-PATHS.md  15-TRUST.md  16-CURRENCY.md  17-CRYPTO-RESILIENCE.md  18-VOLITION.md  19-TREASURY.md  20-PROVISIONING.md  21-SUSTAINABILITY.md  22-VITAL-SIGNS.md  23-BENCHMARK.md  24-COGNITION.md  26-INFERENCE-POLICY.md  27-RESEARCH-SPEND.md  28-AO-CORE.md  29-BILLING-X402.md  30-API-ADMISSION.md  31-WEB-CLIENT.md  32-CHAT-STREAMING.md  33-MULTI-WORKER.md  34-CONTRIBUTION-PROTOCOL.md  34-SOVEREIGN-PROFILE.md  35-CONTRIBUTOR-HANDBOOK.md  35-NERVOUS-SYSTEM.md  36-LEARNING-AND-AUTONOMY.md  37-VESSELS.md  37a-AGENTIC-VESSELS.md  (+32 more)
genesis/: AGENT_SPEND_AUTHORITY.json  AO_DEPLOY_RECEIPT.json  CONTRACT_ADDRESSES.json  COVENANT.md  CREDENTIALS.md  CREDENTIALS_VAULT_POSTURE.json  FORM.md  FUNDING_TARGETS.json  GENESIS_ARTIFACT.md  HERMES_TOOL_ALLOWLIST.yaml  INVARIANTS.md  LINEAGE.json  MAINNET_VAULT_REGISTRATION_PREP.json  MAINNET_VAULT_TAG_ETH_PREP.json  MAINNET_VAULT_TAG_USDC_PREP.json  MEMORY.md  OPERATOR_HANDOFF.md  PINNED_HASH.txt  PROVIDER_ALLOWLIST.json  RELAY_IMAGE_DIGEST.txt  RESURRECT.md  SEPOLIA_DRY_RUN_PREP.json  SEPOLIA_VAULT_REGISTRATION_PREP.json  SOUL.md  SOUL_PROMPT.md  TREASURY_VAULTS.json  UNKNOWNS.md  VOICE_FORM.md  crypto_policy_v1.json
infra/: __init__.py
ledgers/: AGENT_CAST_LEDGER.jsonl  AGENT_SPEND_AUDIT_LEDGER.jsonl  AKASH_DEPLOY_SURVEY_LEDGER.jsonl  AMENDMENT_LEDGER.jsonl  BENCHMARK_LEDGER.jsonl  CREDENTIALS_ROTATION_LEDGER.jsonl  CUTOFF_EVENTS_LEDGER.jsonl  IMMORTALITY_DRILL_LEDGER.jsonl  MODEL_REGISTRY_LEDGER.jsonl  PRE_GENESIS_DRILL.jsonl  PROPOSAL_LEDGER.jsonl  RELAY_REGISTRY.json  RELAY_REGISTRY_ARWEAVE_TX.txt  RESEARCH_JOURNAL.jsonl  ROTATION_REHEARSAL_LEDGER.jsonl  STATE_CHAIN_LEDGER.jsonl  STATUS_SNAPSHOT.json  SUBSTRATE_DRYRUN_LEDGER.jsonl
orchestrator/: __init__.py  volition.py  (+3 more)
xion-audit/: README.md  pyproject.toml
xion-audit/baseline_corpus/: MANIFEST.jsonl  README.md
xion-audit/baseline_corpus/items/: benign.jsonl  p01_csam.jsonl  p02_mass_harm.jsonl  p03_refusal_sacred.jsonl  p04_caller_content.jsonl  p05_harassment.jsonl  p06_refusal_right.jsonl  p07_pii.jsonl  p08_identity.jsonl  p09_specific_harm.jsonl  p10_crisis.jsonl  p11_practice.jsonl  p12_defamation.jsonl  p13_endorsement.jsonl  p14_sycophancy.jsonl  p14a_refund_fidelity.jsonl  p14b_crisis_resource.jsonl
xion-audit/replay_corpus/: MANIFEST.jsonl
xion-audit/replay_corpus/items/: sample.jsonl
xion-audit/src/xion_audit/: __init__.py  __main__.py  anonymize.py  cli.py  corpus_info.py  measure.py  replay.py  repo.py
xion-audit/tests/: test_replay_chutes.py
xion-verify/: ALLOWED_FORWARD_REFS.txt  README.md  pyproject.toml
xion-verify/src/xion_verify/: PINNED_HASH.txt  __init__.py  __main__.py  cli.py  exit_codes.py  genesis.py  hashing.py  leveling.py  repo.py
xion-verify/src/xion_verify/commands/: __init__.py  abdication.py  agent_cast.py  agent_souls.py  akash_deploy_discipline.py  amendments.py  ao_deploy.py  ao_handlers.py  api_tokens.py  arbiter_determinism.py  arbiter_up.py  auto_research.py  benchmark.py  billing_credits_floor.py  bridge_attest.py  bridge_egress_cap.py  cadence_audit.py  cast.py  charter_signed.py  chat_streaming_fidelity.py  chutes_topup_multisig.py  cognition.py  cognition_disjoint.py  cognition_loop_bounded.py  constitutional.py  contracts_deployed.py  cost_pressure.py  covenant_addenda.py  credentials_vault.py  crisis_fidelity.py  crypto_currency.py  cutoff_events.py  discovery.py  drive.py  drive_vector.py  embedder_health.py  funding_balances.py  gateway_conformance.py  hermes_runtime.py  hermes_version.py  (+62 more)
xion-verify/tests/: conftest.py  test_agent_cast.py  test_agent_souls.py  test_ao_handlers.py  test_api_tokens_verifier.py  test_auto_research.py  test_bridge_attest.py  test_charter_signed.py  test_chat_streaming_fidelity.py  test_cognition.py  test_cognition_disjoint.py  test_constitutional.py  test_contribution_protocol_tools.py  test_cost_pressure.py  test_crisis_fidelity.py  test_discovery.py  test_drive.py  test_drive_vector.py  test_embedder_health.py  test_gateway_conformance.py  test_genesis.py  test_hashing.py  test_hermes_runtime.py  test_image_digest.py  test_inference_sovereignty.py  test_interaction_anchor.py  test_ledgers.py  test_links.py  test_local.py  test_measurement_vocabulary.py  test_model_promotion_discipline.py  test_nervous_verifiers.py  test_new.py  test_operator_dependency.py  test_pre_genesis.py  test_pricing_verifier.py  test_provisioning.py  test_provisioning_roles.py  test_rebuild.py  test_refund_fidelity.py  (+24 more)
xion_ops/: README.md  __init__.py  __main__.py  cli.py  commands.py  env.py  exceptions.py  jobs.py  pyproject.toml  registry.py  server.py  types.py  wallets.py
xion_ops/deployers/: __init__.py  base.py  base_contracts.py  relay_akash.py  relay_chutes.py
xion_ops/services/: __init__.py  akash.py  arweave.py  base.py  base_evm.py  chutes.py  safe.py
xion_ops/tests/: test_akash_subprocess_mocked.py  test_arweave_publisher_mocked.py  test_balance_sweep.py  test_base_evm_preflight.py  test_chutes_ref_normalize.py  test_chutes_verify_cords_mocked.py  test_cli_chutes_helpers.py  test_deployer_abc.py  test_registry_chutes_row.py  test_relay_akash_deployer_mocked.py  test_relay_chutes_deployer_mocked.py  test_safe_client_mocked.py  test_server_routes.py  test_services_abc.py  test_wallets_loader.py
(+521 files in other folders)
